--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "conference-api",
-  "version": "0.0.1",
-  "description": "Sample Conference Web Application",
-  "main": "server.js",
+  "name": "conference-api-exp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "test"
-  },
-  "keywords": [
-    "api"
-  ],
-  "author": "Eugene Byas",
-  "license": "MIT",
-  "engines": {
-	"node": "0.8.4",
-	"npm": "1.1.49"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-	"body-parser": "^1.0.1",
-    "express": "^4.0.0",
-	"method-override": "^1.0.0",
-	"mongoose": "^3.6.13",
-	"morgan": "^1.0.0",
-	"nodemon": "^1.2.0"
+    "body-parser": "~1.10.2",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.1",
+    "ejs": "~2.2.3",
+    "express": "~4.11.1",
+    "mongoose": "^3.8.24",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
   }
 }
