--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.10.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.7.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "~2.2.3",
     "express": "~4.11.1",
+    "express-session": "^1.10.3",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0"
   }
 }
